--- a/app/design/frontend/Earthlite/base/web/css/source/_forms_extend.less
+++ b/app/design/frontend/Earthlite/base/web/css/source/_forms_extend.less
@@ -206,6 +206,7 @@
             }
             &.error > *:first-child:before {
                 content: '\e92e';
+                color: @message-error__bar;
             }
             &:after {
                 content: '';
